@@ -175,6 +175,7 @@ Michael J. Sikorsky
 Michael McCallum
 Michael Montuori
 Michael Newcomb
+Micheal Nygard
 Michael Saunders
 Miha
 Mike Roberts
@@ -252,6 +253,7 @@ Thomas Butz
 Thomas Christen
 Thomas Christensen
 Thomas Haas
+Thomas Quas
 Tim Drury
 Tim Fennell
 Timothy Gerard Endres
