@@ -706,6 +706,10 @@
   </name>
   <name>
     <first>Michael</first>
+    <last>Nygard</last>
+  </name>
+  <name>
+    <first>Michael</first>
     <last>Saunders</last>
   </name>
   <name>
@@ -1000,6 +1004,10 @@
   <name>
     <first>Thomas</first>
     <last>Haas</last>
+  </name>
+  <name>
+    <first>Thomas</first>
+    <last>Quas</last>
   </name>
   <name>
     <first>Tim</first>
